@@ -1,4 +1,6 @@
 0.52
+    - eq_set() could cause problems under threads due to a weird sort bug
+      [rt.cpan.org 6782]
     - undef no longer equals '' in is_deeply() [rt.cpan.org 6837]
     - is_deeply() would sometimes compare references as strings.
       [rt.cpan.org 7031]
